# docs/swagger.yaml
@@ -21,6 +21,15 @@ definitions:
       totalScore:
         type: number
     type: object
+  handler.CommentPageResponse:
+    properties:
+      comments:
+        items:
+          $ref: '#/definitions/handler.V2CommentResponse'
+        type: array
+      lastCursor:
+        type: integer
+    type: object
   handler.CommentRequest:
     properties:
       content:
@@ -474,6 +483,31 @@ definitions:
         type: integer
       totalScore:
         type: number
+    type: object
+  handler.V2CommentResponse:
+    properties:
+      commentId:
+        type: integer
+      content:
+        type: string
+      createdAt:
+        type: string
+      isLiked:
+        type: boolean
+      isRecomment:
+        type: boolean
+      likes:
+        type: integer
+      memberId:
+        type: integer
+      nickname:
+        type: string
+      parentCommentId:
+        type: integer
+      recommentsCount:
+        type: integer
+      songId:
+        type: integer
     type: object
   handler.V2TotalChartResponse:
     properties:
@@ -2466,6 +2500,48 @@ paths:
       summary: 인기차트 조회(Version2)
       tags:
       - Chart
+  /v2/songs/{songId}/comments:
+    get:
+      consumes:
+      - application/json
+      description: 특정 노래의 댓글 목록 가져오기V2(최신순, 오래된순, 추천순, 커서페이징 적용) - query param이 없으면
+        디폴트는 최신순 입니다.
+      parameters:
+      - description: 정렬 기준. 최신순(디폴트)=recent, 오래된순=old, 추천순=best
+        in: query
+        name: filter
+        type: string
+      - description: 한번에 조회할 댓글의 개수. 디폴트값은 20
+        in: query
+        name: size
+        type: string
+      - description: 마지막에 조회했던 커서의 commentId(이전 요청에서 lastCursor값을 주면 됨), 없다면 default로
+          정렬기준의 가장 처음 댓글부터 줌
+        in: query
+        name: cursor
+        type: string
+      - description: songId
+        in: path
+        name: songId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 성공
+          schema:
+            allOf:
+            - $ref: '#/definitions/pkg.BaseResponseStruct'
+            - properties:
+                data:
+                  $ref: '#/definitions/handler.CommentPageResponse'
+              type: object
+      security:
+      - BearerAuth: []
+      summary: 특정 노래의 댓글 목록 가져오기V2(최신순, 오래된순, 추천순, 커서페이징 적용)
+      tags:
+      - Comment
   /v2/songs/{songId}/related:
     get:
       consumes:
